<resources>
    <string name="app_name">Calculator</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="clear_all">AC</string>
    <string name="clear_entry">CE</string>
    <string name="decimal_indicator">.</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_recall">MR</string>
    <string name="memory_clear">MC</string>
    <string name="square_root_alt">Square root</string>
    <string name="multiply_alt">Multiply</string>
    <string name="divide_alt">Divide</string>
    <string name="negate_alt">Negate</string>
    <string name="subtract_alt">Subtract</string>
    <string name="add_alt">Add</string>
    <string name="backspace_alt">Backspace</string>
    <string name="equal_alt">Equal</string>
</resources>