<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="start"
        android:paddingHorizontal="16dp"
        android:paddingVertical="48dp"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textSize="32pt"
        android:textColor="#000000"
        android:gravity="end|top"
        android:fontFamily="@font/made_tommy_semibold"
        android:background="@drawable/display_background"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonMemoryRecall"
            style="@style/MemoryButton"
            android:text="@string/memory_recall"
            app:layout_constraintBottom_toBottomOf="@+id/buttonMemoryAdd"
            app:layout_constraintEnd_toStartOf="@+id/buttonMemoryClear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonMemorySubtract" />

        <ImageButton
            android:id="@+id/buttonSquareRoot"
            style="@style/UnaryOperatorButton"
            android:src="@drawable/square_root"
            android:contentDescription="@string/square_root_alt"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
            app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonNegate" />

        <Button
            android:id="@+id/buttonMemoryClear"
            style="@style/MemoryButton"
            android:text="@string/memory_clear"
            app:layout_constraintBottom_toBottomOf="@+id/buttonMemoryAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonMemoryRecall" />

        <ImageButton
            android:id="@+id/buttonMultiply"
            style="@style/BinaryOperatorButton"
            android:src="@drawable/multiply"
            android:contentDescription="@string/multiply_alt"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button9" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/UnaryOperatorButton"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/buttonNegate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/buttonDivide"
            style="@style/BinaryOperatorButton"
            android:src="@drawable/divide"
            android:contentDescription="@string/divide_alt"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSquareRoot" />

        <Button
            android:id="@+id/buttonMemoryAdd"
            style="@style/MemoryButton"
            android:layout_marginBottom="12dp"
            android:text="@string/memory_add"
            app:layout_constraintBottom_toTopOf="@+id/buttonClear"
            app:layout_constraintEnd_toStartOf="@+id/buttonMemorySubtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonMemorySubtract"
            style="@style/MemoryButton"
            android:text="@string/memory_subtract"
            app:layout_constraintBottom_toBottomOf="@+id/buttonMemoryAdd"
            app:layout_constraintEnd_toStartOf="@+id/buttonMemoryRecall"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonMemoryAdd" />

        <ImageButton
            android:id="@+id/buttonNegate"
            style="@style/UnaryOperatorButton"
            android:src="@drawable/negate"
            android:contentDescription="@string/negate_alt"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
            app:layout_constraintEnd_toStartOf="@+id/buttonSquareRoot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonClear" />

        <Button
            android:id="@+id/button9"
            style="@style/DigitButton"
            android:text="@string/digit_9"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8" />

        <Button
            android:id="@+id/button8"
            style="@style/DigitButton"
            android:text="@string/digit_8"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7" />

        <Button
            android:id="@+id/button7"
            style="@style/DigitButton"
            android:layout_marginBottom="12dp"
            android:text="@string/digit_7"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            style="@style/DigitButton"
            android:layout_marginBottom="12dp"
            android:text="@string/digit_4"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button5"
            style="@style/DigitButton"
            android:text="@string/digit_5"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            style="@style/DigitButton"
            android:text="@string/digit_6"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5" />

        <ImageButton
            android:id="@+id/buttonSubtract"
            style="@style/BinaryOperatorButton"
            android:src="@drawable/subtract"
            android:contentDescription="@string/subtract_alt"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button6" />

        <Button
            android:id="@+id/button1"
            style="@style/DigitButton"
            android:text="@string/digit_1"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@style/DigitButton"
            android:text="@string/digit_2"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            style="@style/DigitButton"
            android:text="@string/digit_3"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <ImageButton
            android:id="@+id/buttonAdd"
            style="@style/BinaryOperatorButton"
            android:src="@drawable/add"
            android:contentDescription="@string/add_alt"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3" />

        <Button
            android:id="@+id/button0"
            style="@style/DigitButton"
            android:text="@string/digit_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDecimal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonDecimal"
            style="@style/DigitButton"
            android:text="@string/decimal_indicator"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button0" />

        <ImageButton
            android:id="@+id/buttonDelete"
            style="@style/DigitButton"
            android:src="@drawable/delete_button"
            android:contentDescription="@string/backspace_alt"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDecimal" />

        <ImageButton
            android:id="@+id/buttonEqual"
            style="@style/EqualButton"
            android:src="@drawable/equal"
            android:contentDescription="@string/equal_alt"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>